nodejs/k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-example
spec:
  type: ClusterIP
  ports:
    - name: nodejs
      port: 3000
  selector:
    app: nodejs-example
