nodejs/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: nodejs-example
spec:
  rules:
    - host: nodejs.PLACEHOLDER_DOMAIN 
      http:
        paths:
          - path: /
            backend:
              serviceName: nodejs-example
              servicePort: nodejs
  tls:
    - hosts:
        - nodejs.PLACEHOLDER_DOMAIN
      secretName: nodejs-PLACEHOLDER_DOMAIN-tls
